--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     image: dto80/234-lab11
     ports:
       - "8084:8080"
+    volumes:
+      - type: bind
+        source: C:/Users/User/automate-test-frontend/list/
+        target: /data
   frontend:
     image: suraditluo/pict
     ports:
